--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -51,7 +51,7 @@ jobs:
         run: docker build . --file Dockerfile --tag image
 
       - name: Log into registry
-        run: echo "${{ secrets.HUB_PASS }}" | docker login hub.docker.com -u ${{ secrets.HUB_USER }} --password-stdin
+        run: echo "${{ secrets.HUB_PASS }}" | docker login docker.io -u ${{ secrets.HUB_USER }} --password-stdin
 
       - name: Push image
         run: |
