--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,9 +44,9 @@ jobs:
 
       - name: build and push image
         run: |
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          [ "$VERSION" == "master" ] && VERSION=bleeding
+          export VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && export VERSION=$(echo $VERSION | sed -e 's/^v//')
+          [ "$VERSION" == "master" ] && export VERSION=bleeding
 
           echo VERSION=$VERSION
 
@@ -55,11 +55,11 @@ jobs:
 
           # tag and push versions X.X and X
           if echo $VERSION | grep -qE '\w+\.\w+\.\w+'; then
-            VERSION=$(echo $VERSION | sed -E 's/^(\w+\.\w+).*/\1/')
+            export VERSION=$(echo $VERSION | sed -E 's/^(\w+\.\w+).*/\1/')
             docker-compose build
             docker-compose push
 
-            VERSION=$(echo $VERSION | sed -E 's/^(\w+).*/\1/')
+            export VERSION=$(echo $VERSION | sed -E 's/^(\w+).*/\1/')
             docker-compose build
             docker-compose push
           fi
