--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,14 +21,37 @@ env:
   DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_USER }}
   DOCKER_HUB_PASS: ${{ secrets.DOCKER_HUB_PASS }}
 
+defaults:
+  steps:
+    - uses: actions/checkout@v2
+    - run: echo $DOCKER_HUB_PASS | docker login docker.io -u $DOCKER_HUB_USER --password-stdin
+    - run: |
+        export VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+        [[ "${{ github.ref }}" == "refs/tags/"* ]] && export VERSION=$(echo $VERSION | sed -e 's/^v//')
+        [ "$VERSION" == "master" ] && export VERSION=bleeding
+
+        echo VERSION=$VERSION
+
+        docker-compose build
+        docker-compose push
+
+        # tag and push versions X.X and X
+        if echo $VERSION | grep -qE '\w+\.\w+\.\w+'; then
+          export VERSION=$(echo $VERSION | sed -E 's/^(\w+\.\w+).*/\1/')
+          docker-compose build
+          docker-compose push
+
+          export VERSION=$(echo $VERSION | sed -E 's/^(\w+).*/\1/')
+          docker-compose build
+          docker-compose push
+        fi
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: run tests
-        run: |
+      - run: |
           docker-compose --file docker-compose.test.yml build
           #docker-compose --file docker-compose.test.yml run sut
 
@@ -36,33 +59,6 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: log into registry
-        run: echo $DOCKER_HUB_PASS | docker login docker.io -u $DOCKER_HUB_USER --password-stdin
-
-      - name: build and push image
-        run: |
-          export VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && export VERSION=$(echo $VERSION | sed -e 's/^v//')
-          [ "$VERSION" == "master" ] && export VERSION=bleeding
-
-          echo VERSION=$VERSION
-
-          docker-compose build
-          docker-compose push
-
-          # tag and push versions X.X and X
-          if echo $VERSION | grep -qE '\w+\.\w+\.\w+'; then
-            export VERSION=$(echo $VERSION | sed -E 's/^(\w+\.\w+).*/\1/')
-            docker-compose build
-            docker-compose push
-
-            export VERSION=$(echo $VERSION | sed -E 's/^(\w+).*/\1/')
-            docker-compose build
-            docker-compose push
-          fi
 
   shcedule-push:
     runs-on: ubuntu-latest
@@ -72,32 +68,3 @@ jobs:
         refs:
           - master
           - 1.0.0
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: log into registry
-        run: echo $DOCKER_HUB_PASS | docker login docker.io -u $DOCKER_HUB_PASS --password-stdin
-
-      - name: build and push image
-        run: |
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          [ "$VERSION" == "master" ] && VERSION=bleeding
-
-          echo VERSION=$VERSION
-
-          docker-compose build
-          docker-compose push
-
-          # tag and push versions X.X and X
-          if echo $VERSION | grep -qE '\w+\.\w+\.\w+'; then
-            VERSION=$(echo $VERSION | sed -E 's/^(\w+\.\w+).*/\1/')
-            docker-compose build
-            docker-compose push
-
-            VERSION=$(echo $VERSION | sed -E 's/^(\w+).*/\1/')
-            docker-compose build
-            docker-compose push
-          fi
-
