--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -55,7 +55,7 @@ jobs:
           ref: ${{ matrix.ref }}
       - run: echo $DOCKER_HUB_PASS | docker login docker.io -u $DOCKER_HUB_USER --password-stdin
       - run: |
-          export VERSION=$(echo "${{ matrix.ref }}"
+          export VERSION=$(echo "${{ matrix.ref }}")
           [ "$VERSION" == "master" ] && export VERSION=dev
 
           echo GITHUB_REF=${{ matrix.ref }}
